# dfgame

./: .gitignore  LICENSE  README.md  lw.cross  makefile  meson.build  meson_options.txt
data/: dfgame.sh
data/catalog/: dfgame-editor.xml
data/gameEditor/: config.mk  install.sh  makefile
data/gameOnly/: .gitignore  config.mk  install.sh  makefile
data/shaders/: basic_tex.frag  basic_tex.vert  basic_untex.frag  basic_untex.vert  blur.frag  blur.gl  debug.frag  debug.vert  invert.frag  invert.gl  shader_basic_tex.gl  shader_basic_untex.gl  shader_debug.gl  shader_test_post.gl  shader_text.gl  test_post.frag  text.frag  wave.frag  wave.gl
demo/basic/: main.c  meson.build
demo/comets/: main.c  meson.build
demo/comets/assets/: bullet.xml  player.xml  rock.xml
demo/editor/: Demo.vapi  DemoApp.vala  MainWindow.vala  Scene.vapi  main.vala  meson.build  scene.c  scene.h  triangle.c  triangle.h
demo/editor/assets/: MainWindow.ui  MainWindow.ui~  demo.gresource.xml
demo/editor/assets/schemas/: scene.xsd  triangle.xsd
demo/fps/: main.c  meson.build
demo/fps/assets/: Pistol.xml  barrel.xml  test.txt
demo/heightmap/: main.c  meson.build
demo/heightmap/assets/: heightmap.frag  heightmap.vert
demo/logo/: main.c  meson.build
demo/planets/: main.c  meson.build
demo/text/: main.c  meson.build
demo/text/assets/: TestFont.xml
doc/: Doxyfile.in  meson.build
lib/: dfgame-common.pc  dfgame-editor-front.pc  dfgame-editor.pc  dfgame-game-front.pc  dfgame-game.pc
src/: dfgame-common.h  dfgame-editor-front.h  dfgame-editor.h  dfgame-game-front.h  dfgame-game.h
src/application/: input.c  input.h  input.priv.h  input_common.c  input_id.h  mainloop.c  mainloop.h  mainloop.hd  meson.build  window.c  window.h  window_common.h
src/application/editor/: AdvancedExpander.vala  DFGame.Application.gresources.xml  Init.vala  PropertyGrid.vala  Vec2Entry.ui  Vec3Entry.ui  Vec4Entry.ui  VectorEntry.vala  Viewport.vala  editorc.vapi  gdk_input.h  gdk_keymap.h  input.c  meson.build  window.c  window.h
src/application/editor/propertygrid/: Annotation.vala  Attribute.vala  Choice.vala  Element.vala  IPropertyNode.vala  MultiElement.vala  MultiPropertyHeader.vala  PropertyEditorBuilder.vala  PropertyGrid.vala  PropertyList.vala  PropertyType.vala  Restriction.vala  SimpleType.vala  TypeElement.vala  TypeSelectionHeader.vala  xsd_def.vala
src/application/editor/propertygrid/editors/: BoolPropertyEditor.vala  ColorPropertyEditor.vala  EnumPropertyEditor.vala  FloatPropertyEditor.vala  IntPropertyEditor.vala  PropertyEditor.vala  VectorPropertyEditor.vala
src/application/game/: glfw_input.h  glfw_keymap.h  input.c  mainloop.c  mainloop.hd  meson.build  window.c  window.h
src/application/input/: input.c
src/application/loop/: loop.h
src/application/window/: input-source.h  window.c
src/audio/: audio.c  audio.h  audio_log.c  audio_log.h  audio_player.c  audio_player.h  audio_player.hd  audio_source.c  audio_source.h  audio_source.hd  audio_system.c  audio_system.h  meson.build
src/common/: array_list.c  array_list.h  asset_registry.c  asset_registry.h  audio.c  audio.h  audio_def.h  camera.c  camera.h  font.c  font.h  framebuffer.h  io_util.c  io_util.h  matrix.c  matrix.h  mesh.c  mesh.h  particle.c  particle.h  program.c  program.h  render.c  render.h  render_def.h  resource_def.h  sorted_tree.c  sprite.c  sprite.h  sprite_def.h  text.c  text.h  texture.c  texture.h  transform.c  transform.h  transform_def.h  util.c  util.h  vector.c  (+3 more)
src/core/: check.c  check.h  crc.c  crc.h  meson.build  power.c  power.h  stringutil.c  stringutil.h  types.h
src/core/container/: array.c  array.h  array.hd  array_list.c  array_list.h  container_common.h  delegate.h  hashmap.c  hashmap.h  hashmap.hd  predicate.h  sorted_tree.c  sorted_tree.h
src/core/log/: log.c  log.h
src/core/log/vapi/: Log.vapi
src/core/memory/: alloc.c  alloc.h
src/editor/: AssetViewer.vala  LogPane.vala  LogViewer.vala  MissingFilesDialog.vala  NewProjectDialog.vala  ResourceModel.vala  Viewport.vala  project.c  project.h
src/editor-frontend/: AssetEditor.vala  LogPane.vala  MissingFilesDialog.vala  ProjectFilePane.vala  ResourceEntry.vala  ResourceModel.vala  ResourceSelector.vala  io_utils.vala
src/game/: input.c  input.h
src/game-frontend/: input-source.c  input-source.h  loop.c  loop.h  window.c  window.h
src/gameplay/: control.c  control.h  meson.build
src/graphics/: camera.c  camera.h  camera.hd  color.h  debug_draw.c  debug_draw.h  font.c  font.h  font.hd  font.priv.h  framebuffer.c  framebuffer.h  graphics_log.c  graphics_log.h  mesh.c  mesh.h  mesh.hd  meson.build  renderpass.c  renderpass.h  renderpass.hd  shader.c  shader.h  shader.hd  shader_init.c  shader_init.h  sprite.c  sprite.h  sprite.hd  spriteset.c  spriteset.h  spriteset.hd  spriteset.priv.h  text.c  text.h  text.hd  texture.c  texture.h  texture_atlas.c  texture_atlas.h  (+2 more)
src/graphics/vapi/: Framebuffer.vapi  Spriteset.vapi  Texture.vapi
src/math/: aabb.c  aabb.h  alignment.c  alignment.h  interpolate.c  interpolate.h  mathutil.h  matrix.c  matrix.h  matrix.hd  matrix.js  meson.build  quat.c  quat.h  quat.hd  transform.c  transform.h  transform.hd  vector.c  vector.h  vector.hd  vector.js
src/math/vapi/: Aabb.vapi  Vector.vapi
src/render/: camera.c  camera.h  font.h  framebuffer.c  meson.build  program.h  render.c  render.h  sprite.c  text.c  (+3 more)
src/resource/: asset_registry.h  audio_loader.c  audio_loader.h  data_loader.c  data_loader.h  font_loader.c  font_loader.h  io_util.h  mesh_loader.c  mesh_loader.h  meson.build  paths.c  paths.h  resource_def.h  sprite_io.c  sprite_io.h  sprite_loader.c  sprite_loader.h  texture_loader.c  texture_loader.h  xmlutil.c  xmlutil.h
test/core/: main.c  meson.build  strings.c  strings.h  test_containers.c  test_containers.h  test_strings.c  test_strings.h
test/resource/: main.c  meson.build  paths.c  paths.h  xml.c  xml.h
tools/glslc/: main.c  meson.build
vapi/: dfgame-common.vapi  dfgame-editor-frontend.deps  dfgame-editor-frontend.vapi  dfgame-editor.vapi  dfgame-game.vapi
(+16 files in other folders)
