applicationdeps = [ glfw, glew ]
applicationlink = [ corelib, gameplaylib, graphicslib, mathlib ]
applicationinc  = [ include_directories('../core'), include_directories('../gameplay'), include_directories('../graphics'), include_directories('../math'), include_directories('../application') ]

subdir('editor')
subdir('game')
